chore: fix sticky scroll issue and 1px alignment of select all checkbox

--- a/polaris-react/src/components/IndexTable/IndexTable.scss
+++ b/polaris-react/src/components/IndexTable/IndexTable.scss
@@ -2,7 +2,7 @@
 
 .IndexTable {
   // stylelint-disable -- Polaris component custom properties
-  --pc-index-table-translate-offset: 35px;
+  --pc-index-table-translate-offset: 36px;
   --pc-index-table-table-header-offset: 36px;
   --pc-index-table-cell: 1;
   --pc-index-table-sticky-cell: 31;
@@ -302,7 +302,6 @@ $loading-panel-height: 53px;
 }
 
 .FirstStickyHeaderElement {
-  margin-left: calc(-1 * var(--p-space-05));
   padding-right: var(--p-space-05);
 }
 
@@ -605,7 +604,7 @@ $loading-panel-height: 53px;
   left: 0;
   // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
   right: 0;
-  padding: 0 var(--p-space-2) 0 calc(var(--p-space-2) + var(--p-space-05));
+  padding: 0 var(--p-space-2) 0 calc(var(--p-space-3) - var(--p-space-025));
   background: var(--p-surface);
 
   &.StickyTableHeader-condensed {
